greet-app/1-deployment-manifests.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: my-greet-app
  namespace: localdevelopment
  labels:
    app: my-greet-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-greet-app
  template:
    metadata:
      labels:
        app: my-greet-app
    spec:
      containers:
        - name: greet-app
          resources: {}
          image: dockerbishalthapa/greet-app@sha256:aeb328d4811575671f16549ca20a1d3cefe356c941569abfb85fc339349d2a7b
          ports:
            - name: greet-pod-port
              containerPort: 8080
  strategy:
    canary:
      maxSurge: 2
      maxUnavailable: 1

---
apiVersion: v1
kind: Service
metadata:
  name: my-greet-app-service
  namespace: localdevelopment
  labels:
    app: my-greet-app-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: my-greet-app-service
  ports:
    - name: https
      port: 8080
      targetPort: 8080
